# BasicOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algoritms/: CMakeLists.txt  algoritm.c  algoritm.h
libs/algoritms/array/: array.c  array.h
libs/data_structure/: CMakeLists.txt
libs/data_structure/vector/: vector.c  vector.h
